Correctly handling title overflow, and parse markdown inside title

--- a/src/public/res/style.css
+++ b/src/public/res/style.css
@@ -50,3 +50,10 @@ h1,h2 {
     border-left: 0;
     border-right: 0;
 }
+article * {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+img {
+    max-width:100%
+}
